[gd_scene load_steps=12 format=2]

[ext_resource path="res://Themes/StyleBoxes/CardFront.tres" type="StyleBox" id=1]
[ext_resource path="res://Themes/Fonts/markazi_text_semi_bold_38.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sourced/Icons/BoxesBeGone/sprite_1006.png" type="Texture" id=3]
[ext_resource path="res://Scenes/HUD/BattleBoard/OpponentBoard/OpponentBoard.gd" type="Script" id=4]
[ext_resource path="res://Managers/Openings/OpeningsManager.gd" type="Script" id=5]
[ext_resource path="res://Themes/StyleBoxes/CardTitleStyleBox.tres" type="StyleBox" id=6]
[ext_resource path="res://Themes/Fonts/markazi_text_24pt.tres" type="DynamicFont" id=7]
[ext_resource path="res://Themes/Fonts/morris_roman_24pt.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Sourced/Icons/GlyphsterUnlimited/1x/medical_healthcare_heart.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sourced/Icons/GlyphsterUnlimited/1x/videogames_card_deck.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sourced/Icons/FontAwesome/fire_solid_white.png" type="Texture" id=11]

[node name="OpponentBoard" type="Control"]
margin_right = 510.0
margin_bottom = 300.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_right = 502.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 176.0
margin_bottom = 300.0
rect_min_size = Vector2( 160, 0 )

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 22.0
margin_right = 176.0
margin_bottom = 278.0
rect_min_size = Vector2( 176, 256 )
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 32.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 152.0
margin_bottom = 196.0

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opponent"
align = 1
valign = 1

[node name="HealthStat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 144.0
margin_bottom = 63.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HealthStat"]
modulate = Color( 0.803922, 0.0392157, 0.0392157, 1 )
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 9 )
stretch_mode = 4

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/HealthStat"]
margin_left = 40.0
margin_top = 1.0
margin_right = 144.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "## / ##"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyStat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 144.0
margin_bottom = 99.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/EnergyStat"]
modulate = Color( 1, 0.411765, 0.729412, 1 )
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 11 )
stretch_mode = 4

[node name="EnergyLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/EnergyStat"]
margin_left = 40.0
margin_top = 1.0
margin_right = 144.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "# / #"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckStat" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 144.0
margin_bottom = 137.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/DeckStat"]
modulate = Color( 0.219608, 0.745098, 0.364706, 1 )
margin_right = 35.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
stretch_mode = 4

[node name="DeckLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/DeckStat"]
margin_left = 43.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "#"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpeningsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 494.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/OpeningsContainer"]
margin_right = 314.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Openings"
align = 1
valign = 1

[node name="Opponents" type="HBoxContainer" parent="MarginContainer/HBoxContainer/OpeningsContainer"]
margin_top = 56.0
margin_right = 314.0
margin_bottom = 176.0
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Players" type="HBoxContainer" parent="MarginContainer/HBoxContainer/OpeningsContainer"]
margin_top = 180.0
margin_right = 314.0
margin_bottom = 300.0
size_flags_vertical = 3
script = ExtResource( 5 )
